// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot: StartReissueButton 1`] = `
<styled.div>
  <styled.a
    href="http://google.com/"
  >
    <styled.div>
      利用できないキャッシュカードの再発行
    </styled.div>
    <styled.div>
      磁気不良、ICチップ不良、汚損、破損等で利用できなくなったキャッシュカードの再発行
    </styled.div>
  </styled.a>
</styled.div>
`;

exports[`should match snapshot: StartReissueButton/Container 1`] = `
<div
  className="sc-bdVaJa cHkdUf"
/>
`;

exports[`should match snapshot: StartReissueButton/Description 1`] = `
<div
  className="sc-bxivhb UFBbs"
>
  説明
</div>
`;

exports[`should match snapshot: StartReissueButton/Link 1`] = `
<a
  className="sc-bwzfXH dJuWjI"
  href="http://google.com/"
>
  リンク
</a>
`;

exports[`should match snapshot: StartReissueButton/Title 1`] = `
<div
  className="sc-htpNat dzExFV"
>
  タイトル
</div>
`;
